projects/compiler/test/lexer/ints_error_invalid_octal_first.out
Error at %FILE_NAME%:1:3
Unexpected character '8':
  |  0o8
       ^